# fcbyk-cli

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  alias.byk.json  pyproject.toml  scripts.byk.json  setup.cfg  setup.py
.github/: cli.md  releases.md  releases.sh
.github/workflows/: test.yml
agents/: constraints.md
docs/: AI.md  Alias.md  Config.md  Get.md  LANSend.md  Pick.md  Run.md  Scripts.md  Servers.md  Slide.md  Svc.md  alias.md  api.md  daemon.md  index.md  package.json  releases.md
docs/.vitepress/: config.mts
docs/.vitepress/configs/: search.ts  sidebar.ts
docs/new/: API.md  ARCHITECTURE.md  COMMAND_TEMPLATE.md
docs/plugins/: api.md  lansend.md  paths.md  template.md
example/: pyproject.toml
example-plugin/: pyproject.toml
example-plugin/demo/: hello.py  main.py
example/hello/: cli.py  main.py
fcbyk/: cli.py
fcbyk/templates/: directory.html
src/bykcli/: __init__.py  __main__.py  app.py  main.py  runtime.py
src/bykcli/api/: __init__.py  context.py  network.py  paths.py
src/bykcli/core/: __init__.py  context.py  errors.py  persistence.py
src/bykcli/infra/: aliases.py  config.py  daemon.py  logging.py  persistence.py  registry.py  state.py  view.py
src/bykcli/plugins/paths/: __init__.py  command.py
src/bykcli/tests/: __init__.py  test_aliases.py  test_cli.py  test_config.py  test_daemon.py  test_network.py  test_paths.py  test_persistence.py  test_state.py  test_view.py
src/fcbyk/: cli.py  defaults.py  main.py  svc.py
src/fcbyk/cli/: __init__.py  callbacks.py  output.py
src/fcbyk/cli_support/: __init__.py  callbacks.py  guard.py  helpers.py  output.py
src/fcbyk/commands/: __init__.py  ai.py  alias.py  jiahao.py  lansend.py  openai.py  pick.py  popup.py  slide.py
src/fcbyk/commands/ai/: cli.py  service.py
src/fcbyk/commands/alias/: __init__.py  cli.py
src/fcbyk/commands/cmd/: __init__.py  cli.py
src/fcbyk/commands/config/: cli.py
src/fcbyk/commands/get/: __init__.py  cli.py
src/fcbyk/commands/jiahao/: cli.py  service.py
src/fcbyk/commands/lansend/: __init__.py  cli.py  controller.py  service.py  transfer_service.py
src/fcbyk/commands/pick/: cli.py  controller.py  service.py
src/fcbyk/commands/popup/: cli.py  service.py
src/fcbyk/commands/run/: __init__.py  cli.py
src/fcbyk/commands/scripts/: __init__.py  cli.py
src/fcbyk/commands/servers/: cli.py
src/fcbyk/commands/slide/: cli.py  controller.py  gui_server.py  service.py
src/fcbyk/commands/svc/: cli.py
src/fcbyk/core/: __init__.py  alias.py  daemon.py  json_storage.py
src/fcbyk/gui/: __main__.py  app.py
src/fcbyk/gui/core/: compatibility.py  process.py  singleton.py
src/fcbyk/gui/ui/: lansend_page.py  main_window.py  pick_codes_dialog.py  pick_items_dialog.py  pick_page.py  resources.py  slide_page.py
src/fcbyk/tests/: test_cli.py  test_lansend.py  test_web.py
src/fcbyk/tests/ai/: test_cli.py  test_service.py
src/fcbyk/tests/alias/: test_nested_alias.py  test_placeholders.py
src/fcbyk/tests/daemon/: test_cli.py
src/fcbyk/tests/jiahao/: test_cli.py  test_service.py  test_service_more.py
src/fcbyk/tests/lansend/: test_cli.py  test_controller_extra.py  test_controller_more.py  test_lansend.py  test_web.py
src/fcbyk/tests/pick/: test_cli.py  test_controller.py  test_service.py
src/fcbyk/tests/popup/: test_cli.py  test_service.py
src/fcbyk/tests/slide/: test_cli.py  test_controller.py  test_service.py
src/fcbyk/tests/svc/: test_cli.py
src/fcbyk/tests/utils/: test_config.py  test_output.py
src/fcbyk/tests/web/: test_app.py
src/fcbyk/utils/: asset_downloader.py  common.py  config.py  download.py  files.py  network.py  port.py  storage.py
src/fcbyk/web/: R.py  admin.html  app.py  ide.html  lansend.html  pick.html  pick_files.html  slide.html
src/fcbyk/web/pick/: admin.html  index.html  pick_files.html  style.css
src/fcbyk/web/static/: slide.html
src/fcbykcli/: __init__.py  __main__.py  app.py  main.py  runtime.py
src/fcbykcli/api/: __init__.py  context.py  files.py  paths.py  response.py  state.py  web.py
src/fcbykcli/commands/: __init__.py
src/fcbykcli/commands/hello/: __init__.py  command.py
src/fcbykcli/commands/info/: __init__.py  command.py
src/fcbykcli/commands/paths/: __init__.py  command.py
src/fcbykcli/core/: __init__.py  aliases.py  config.py  context.py  daemon.py  environment.py  paths.py  persistence.py  registry.py  runtime.py  state.py  view.py
src/fcbykcli/infra/: aliases.py  config.py  daemon.py  logging.py  persistence.py  registry.py  state.py  view.py
src/fcbykcli/plugins/: __init__.py
src/fcbykcli/plugins/hello/: __init__.py  command.py
src/fcbykcli/plugins/lansend/: command.py  controller.py  service.py
src/fcbykcli/plugins/paths/: command.py
src/fcbykcli/runtime/: __init__.py
src/fcbykcli/tests/: __init__.py  test_aliases.py  test_cli.py  test_config.py  test_daemon.py  test_network.py  test_paths.py  test_persistence.py  test_state.py  test_view.py
src/fcbykcli/web/: __init__.py  runtime.py
web-ui/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web-ui/scripts/: flatten-dist.mjs
web-ui/src/: qrcode.d.ts
web-ui/src/pages/ide/: App.vue  index.html  styles.scss
web-ui/src/pages/ide/components/: CodeViewer.vue  FileTreeItem.vue  SidebarArea.vue
web-ui/src/pages/lansend/: App.vue  api.ts  base.css  index.html  main.ts  style.scss  types.ts
web-ui/src/pages/lansend/components/: ChatTab.vue  FileList.vue  PreviewTab.vue  UploadDetailsTab.vue  UploadGroups.vue  UploadTab.vue
web-ui/src/pages/lansend/composables/: useLansendDirectory.ts  useLansendPreview.ts  useLansendSpeed.ts  useLansendUpload.ts  usePasswordShake.ts  (+1 more)
web-ui/src/pages/pick/: Admin.vue  App.vue  FilePick.vue  Home.vue  ItemPick.vue  Login.vue  api.ts  base.scss  index.html  main.ts  router.ts  style.scss  types.ts
web-ui/src/pages/slide/: App.vue  api.ts  index.html  main.ts  socket.ts  styles.css  styles.scss  types.ts
web-ui/src/pages/transfer/: App.vue  api.ts  index.html  style.css  types.ts
web-ui/src/utils/: files.ts  time.ts
(+12 files in other folders)
