[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fcbyk-cli"
dynamic = ["version", "readme"]
description = "A CLI tool for fcbyk"
requires-python = ">=3.10"
authors = [
    {name = "fcbyk", email = "731240932@qq.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
    "flask>=2.0",
    "flask-socketio==5.3.3",
    "python-socketio==5.9.0",
    "pyperclip>=1.9.0,<2.0.0",
    "requests>=2.28.0",
    "pyautogui>=0.9.50,<1.0.0",
    "psutil>=5.9.0",
    "waitress>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "beautifulsoup4>=4.10.0,<4.11.0",
    "commitizen",
    "build",
    "twine",
]

[project.scripts]
fcbyk = "fcbyk.cli:main"
byk = "fcbyk.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"], include = ["fcbyk*"] } }

[tool.setuptools.package-data]
fcbyk = ["web/dist/**/*"]

[tool.setuptools.dynamic]
version = {attr = "fcbyk.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.pytest.ini_options]
testpaths = ["src/fcbyk/tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=fcbyk --cov-report=term-missing"

[tool.commitizen]
name = "cz_customize"
version = "0.3.0"
tag_format = "v$version"
changelog_file = "CHANGELOG.md"
bump_message = "release: v$new_version"
version_files = [
    "src/fcbyk/__init__.py:__version__",
    "pyproject.toml:version ="
]

[tool.commitizen.customize]
# 兼容历史emoji提交（emoji可选存在）
commit_parser = '^(?:✨|🐛|♻️|📝|🎨|⚡️|✅|🔧\s*)?(?P<change_type>feat|fix|refactor|docs|perf|test|style|chore)(?:\((?P<scope>[^\)]+)\))?:\s*(?P<message>.+)$'
changelog_pattern = '^(?:(?:✨|🐛|♻️|📝|🎨|⚡️|✅|🔧)\s*)?(feat|fix|refactor|docs|perf|test|style|chore)'
change_type_order = [
    "feat",
    "fix",
    "refactor",
    "docs",
    "style",
    "perf",
    "test",
    "chore"
]

message_template = """
{{ change_type }}{% if scope %}({{ scope }}){% endif %}: {{ message }}
"""

[tool.commitizen.customize.change_type_map]
feat = "Features"
fix = "Bug Fixes"
refactor = "Refactor"
docs = "Documentation"
style = "Styles"
perf = "Performance"
test = "Tests"
chore = "Chores"